# snapclass

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/design/: snapclass_versioning_design_proposal.md
skills/snapclass-fluency/: SKILL.md
src/snapclass/: __init__.py  collections.py  containers.py  decorators.py  formatters.py  fresh.py  hooks.py  paths.py  plugins.py  schemas.py  serializers.py  sessions.py  sidecar.py  snapshots.py  stash.py  types.py
src/snapclass/skills/snapclass-fluency/: SKILL.md
tests/: test_behavior_contracts.py  test_collection_patterns.py  test_conversion_and_writes.py  test_everlast_inspired_workflows.py  test_example_app_workflows.py  test_formatters.py  test_fresh.py  test_lorebubble_fixture_port.py  test_model_meta.py  test_module_relative_patterns.py  test_mypy_plugin.py  test_p0_app_surfaces.py  test_plunkylib_fixture_port.py  test_sessions_and_frozen.py  test_sidecar.py  test_snapclass_public_api.py  test_snapshot_magic_and_serializers.py  test_stash_binding_and_api.py  test_sync.py  test_unknown_fields.py
