[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "snapclass"
version = "0.1.2"
description = "Human-readable file persistence for Python dataclasses."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Mattie Casper" },
]
keywords = [
  "dataclasses",
  "persistence",
  "serialization",
  "yaml",
  "toml",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "json5>=0.9,<1",
  "ruamel.yaml>=0.18,<0.20",
  "tomlkit>=0.10,<0.16",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
typing = [
  "mypy>=1.11,<3",
]

[project.urls]
Repository = "https://github.com/Mattie/snapclass"
Issues = "https://github.com/Mattie/snapclass/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snapclass = ["py.typed", "skills/*/SKILL.md"]
